# rda-citation_finder

./: README.md  pyproject.toml  settings.txt
src/citation_finder/: cache.py  citefind.py  configure.py  crossref.py  datacite.py  doi_list.py  gscholar.py  inserts.py  integrity.py  local_settings.py  openalex.py  query_crossref.py  query_scopus.py  query_wos.py  scopus.py  utils.py  wos.py
src/citation_finder/templates/: settings.txt
src/libcitefind/: utils.cpp
