[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "citation_finder"
version = "1.0.12"
authors = [
    {name = "Bob Dattore", email = "dattore@ucar.edu"},
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "psycopg2",
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
citefind = "citation_finder.citefind:main"
gscholar = "citation_finder.gscholar:main"

[tool.setuptools.package-data]
citation_finder = ["local_settings.py"]
